Backend: added isExactMatch in search-user
